[package]
name = "c19"
version = "0.1.0"
authors = ["Chen Fisher <chen.fisher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
serde_json = "1.0.57"
typetag = "0.1"
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13.7"
futures = { version="0.3", features=["thread-pool", "executor"] }
http = "0.2.1"
rand = { version="0.7.3", features=["small_rng"] }
reqwest = { version = "0.10", features = ["json"] }
kube = "0.42.0"
kube-runtime = "0.42.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_18"] }
log = "0.4"
env_logger = "0.7.1"
im = { version = "15.0.0", features = ["serde"] }
rmp-serde = "0.14.4"
twox-hash = "1.6.0"
